--- a/templates/event-registration-form.html
+++ b/templates/event-registration-form.html
@@ -58,7 +58,11 @@
         </div>
     </div>
     {%endif%}
-
+    {%if error != None%}
+    <script>
+        alert("{{error}}")
+    </script>
+    {%endif%}
     <!-- Main -->
     <section class="relative flex items-center justify-center w-full h-full min-h-[100vh] max-h-[100vh] overflow-hidden">
 
@@ -70,7 +74,7 @@
 
         <div class="form max-w-[800px] lg:w-full w-[90%] h-full md:px-12 sm:px-10 px-8 lg:py-16 sm:py-11 py-10 backdrop-blur form z-10 rounded-xl">
             <!-- text-transparent bg-clip-text bg-gradient-to-tr from-orange-500 to-yellow-300 -->
-            <h1 class="text-white form-header-text text-center md:text-3xl sm:text-2xl text-xl font-bold uppercase text-white mb-10 flex justify-center items-center gap-4"><img src="/static/ldrp.png" alt="" class="w-[50px] h-[50px]">Enroll other team members</h1>
+            <h1 class="text-white form-header-text text-center md:text-3xl sm:text-2xl text-xl font-bold uppercase text-white mb-10 flex justify-center items-center gap-4"><img src="/static/ldrp.png" alt="" class="w-[50px] h-[50px]">Enroll other team members for <br> {{event}}</h1>
             <!-- Approved members Div -->
             <div class="flex flex-col items-start justify-center gap-3 w-full my-5 mb-9" id="approved-members">
                 <!-- Members -->
@@ -79,18 +83,19 @@
                     <button class=" text-red-600 !outline-none" onclick="removeMember(this)"><i class="bi bi-trash3"></i></button>
                 </div>
             </div>
-            <form action="./" method="post" class="" >
+            <form action="/addTeamMembers/" method="post" class="" >
                 <input type="text" name="isForm" id='isForm' hidden value="true" />
                 <div class='w-full flex flex-col items-center gap-5 w-full'>
                     <div class="flex items-end justify-center gap-4 w-full">
                         <!-- Add Members Input Div -->
                         <div id="formDiv" class='flex group relative w-full justify-center font-semibold'>
+                            <input hidden  name="user" id="user"/>
                             <input type="email" id='email' spellCheck='false' class='peer bg-transparent font-light tracking-wider w-full pr-3 pl-1 py-2 transition-all duration-300 outline-none text-white border-b-[1px] border-white invalid:border-pink-300 invalid:text-red-400 focus:invalid:border-pink-300' placeholder=' ' tabIndex="1" />
                             <label for='email' class='absolute left-0 -top-4 text-white text-sm transition-all duration-300 peer-focus:text-sm peer-focus:-top-4 peer-invalid:text-red-400 peer-placeholder-shown:top-2 peer-placeholder-shown:text-base peer-placeholder-shown:text-white'>Email</label>
                         </div>
                         <button type="button" class="flex items-center justify-center !outline-none text-slate-200 border-slate-200 rounded-md gap-2 text-2xl" onclick="addMember()"><i class="bi bi-plus-circle"></i></button>
                     </div>
-                    <input type="button" value="Register" tabIndex="7" onclick="javascript:window.location.href='/eventConfirmation'" class='w-fit bg-orange-300 text-black backdrop-blur-sm outline-none mt-5 xl:px-16 lg:px-12 sm:px-10 px-9 py-1.5 xl:text-lg lg:text-md font-semibold cursor-pointer transition-all duration-200 focus:-translate-y-1 hover:ring-[#211d5e] rounded-md' />
+                    <input type="submit" value="Register" tabIndex="7" class='w-fit bg-orange-300 text-black backdrop-blur-sm outline-none mt-5 xl:px-16 lg:px-12 sm:px-10 px-9 py-1.5 xl:text-lg lg:text-md font-semibold cursor-pointer transition-all duration-200 focus:-translate-y-1 hover:ring-[#211d5e] rounded-md' />
                 </div>           
                 <!-- bg-gradient-to-tr from-orange-500 to-yellow-300 -->
             </form>
@@ -279,10 +284,10 @@
 
         let approvedMembersDiv = document.getElementById('approved-members')
         let membersCount = approvedMembersDiv.children.length
-        let userCount = 1
+        let users = {"data":["{{email}}"]}
         function addMember() {
             let inputEmail = document.getElementById('email')
-            if(inputEmail.value !== '' && membersCount <= 2) {
+            if(inputEmail.value !== '' && membersCount <= 4) {
                 fetch("/addTeamMembers/", {
 					method: "POST",
 					body: JSON.stringify({
@@ -300,19 +305,14 @@
                         let memName = document.createElement('p')
                         let tickIcon = document.createElement('i')
                         let deleteIcon = document.createElement('i')
-                        let formDiv = document.getElementById("formDiv")
-                        let input = document.createElement('input')
 
                         memDiv.classList.add('flex', 'items-center', 'justify-between', 'gap-2', 'w-full', 'bg-gradient-to-r', 'from-slate-600', 'via-slate-600', 'to-slate-500', 'py-2', 'px-4', 'rounded-md');
                         memName.classList.add('text-green-400', 'flex', 'items-center', 'gap-2', 'text-lg', 'overflow-x-scroll', 'customScrollbar');
                         tickIcon.classList.add('bi', 'bi-patch-check', 'text-xl');
                         deleteIcon.classList.add('text-red-600', '!outline-none', 'bi', 'bi-trash3', 'cursor-pointer');
                         deleteIcon.setAttribute("onclick", "removeMember(this)");
-                        userCount += 1
-                        input.value = inputEmail.value
-                        input.setAttribute("id","user"+userCount)
-                        input.hidden = true
-                        formDiv.append(input)
+                        
+                        users["data"].push(inputEmail.value)
                         
 
 
@@ -324,6 +324,7 @@
 
                         membersCount = approvedMembersDiv.children.length
                         document.getElementById('email').value = ""
+                        document.getElementById("user").value = users["data"]
                     }
                     else{
 						alert(json.error)
@@ -333,9 +334,10 @@
         }
 
         function removeMember(div) {
+            users["data"].pop( div.parentElement.getElementsByTagName('p')[0].innerHTML)
             div.parentElement.remove()
             membersCount = approvedMembersDiv.children.length
-            userCount -= 1
+            document.getElementById("user").value = users["data"]
         }
     </script>
 
