--- a/templates/account-setup.html
+++ b/templates/account-setup.html
@@ -38,7 +38,7 @@
 <body>
 
     <!-- Main -->
-    <section class="relative flex items-center justify-center w-full h-full min-h-[100vh] max-h-[100vh] overflow-y-hidden">
+    <section class="relative flex items-center justify-center w-full h-full min-h-[100vh] overflow-y-scroll">
 
         <div class="absolute top-0 left-0 w-screen h-[calc((797/1463)*100vw)] h-full min-h-[100vh]">
             <canvas id="canvas" class="h-full w-full object-center block"></canvas>
@@ -76,10 +76,10 @@
 					<!-- Datalist For College -->
 					<div class='flex group relative w-full justify-center -mb-4'>
 						<div class="peer relative w-full">
-							<input list="college-name" name="college-name" size="4" name="college" id='college' type="text" spellCheck='false' class='peer bg-transparent w-full pr-3 pl-1 py-2 transition-all duration-300 outline-none text-white border-b-[1px] border-orange-300' placeholder=''/>
-							<datalist id="college-name" class="z-10 absolute lg:top-9 top-10 left-0 w-fit rounded-lg peer-focus:h-28 customScrollbar peer-focus:overflow-scroll overflow-hidden h-0">
-								<option value="LDRP-ITR" class="bg-gray-600 first-of-type:rounded-t last-of-type:rounded-b text-orange-300 text-sm px-3 py-2 cursor-pointer transition-colors duration-200 hover:bg-[#036] hover:text-white">LDRP-ITR</option>
-								<option value="VSITR" class="bg-gray-600 first-of-type:rounded-t last-of-type:rounded-b text-orange-300 text-sm px-3 py-2 cursor-pointer transition-colors duration-200 hover:bg-[#036] hover:text-white">VSITR</option>
+							<input list="college-name" size="4" name="college" id='college' autocomplete="off" spellCheck='false' class='peer bg-transparent w-full pr-3 pl-1 py-2 transition-all duration-300 outline-none text-white border-b-[1px] border-orange-300' placeholder="Select Your College" />
+							<datalist id="college-name" class="absolute top-9 left-0 h-0 w-fit opacity-0 peer-focus:h-28 peer-focus:opacity-100 transition-all duration-300">
+								<option value="LDRP ITR" class="bg-gray-600 first-of-type:rounded-t last-of-type:rounded-b text-orange-300 text-sm px-3 py-2 cursor-pointer transition-colors duration-200">LDRP ITR</option>
+								<option value="VSITR" class="bg-gray-600 first-of-type:rounded-t last-of-type:rounded-b text-orange-300 text-sm px-3 py-2 cursor-pointer transition-colors duration-200">VSITR</option>
 							</datalist>
 						</div>
 							
