--- a/templates/event-details.html
+++ b/templates/event-details.html
@@ -89,7 +89,7 @@
             <img src="/static/avatars/{{profilePic}}.png" alt="" class="w-[45px] h-[45px] rounded-full object-cover cursor-pointer bg-slate-300" onclick="toggleProfileDropdown()" />
 
             <div class="absolute bg-slate-600 top-16 right-0 w-full min-w-[200px] rounded-md z-[999] h-0 overflow-hidden transition-all duration-300" id="profile-dropdown">
-                <p class="w-full px-4 text-white"><i class="bi bi-person mr-2.5"></i>{{userName}}</p>
+                <p class="w-full px-4 text-white truncate capitalize"><i class="bi bi-person mr-2.5"></i>{{userName}}</p>
                 <hr class="w-full my-2" />
                 <a href="#" class="">
                     <p class="w-full px-4 text-white"><i class="bi bi-box-arrow-right mr-2.5"></i>Logout</p>
@@ -115,7 +115,7 @@
                         <p class="w-full px-4 text-white"><i class="bi bi-person mr-2.5"></i>{{userName}}</p>
                         <hr class="w-full my-2" />
                         <a href="/logout" class="">
-                            <p class="w-full px-4 text-white"><i class="bi bi-box-arrow-right mr-2.5"></i>Logout</p>
+                            <p class="w-full px-4 text-white truncate capitalize"><i class="bi bi-box-arrow-right mr-2.5"></i>Logout</p>
                         </a>
                     </div>
                 </div>
@@ -124,21 +124,22 @@
             </div>
 
             <!-- Mobile Menu -->
-            <div class="absolute top-0 left-full flex flex-col gap-5 items-center justify-center w-screen h-screen z-[999] bg-slate-900 bg-opacity-95 transition-all duration-300" id="mobile-menu">
-                <button class="absolute top-10 right-10 !outline-none" onclick="toggleMobileMenu()"><i class="bi bi-x-lg"></i></button>
-                <a href="/" class="text-2xl">Home</a>
-                <a href="/events" class="text-2xl">Events</a>
-                <a href="/eventConfirmation" class="text-2xl">Event Confirm</a>
-                <a href="/aboutus" class="text-2xl">About Us</a>
-                {% if isUser == False %}
-                <a href="/login" class="text-2xl">Login</a>
-                <a href="/register" class="text-2xl">Register</a>
-                {%else%}
-                {% if isVolunteer == True%}
-                <a href="/ticketVerifer" class="text-2xl">Verifer</a>
-                {%endif%}
-                {%endif%}
-            </div>
+			<div class="absolute top-0 left-full flex flex-col gap-5 items-center justify-center w-screen h-screen z-[999] bg-slate-900 bg-opacity-95 transition-all duration-300" id="mobile-menu">
+				<button class="absolute top-10 right-10 !outline-none" onclick="toggleMobileMenu()"><i class="bi bi-x-lg"></i></button>
+				<a href="/" class="text-2xl">Home</a>
+				<a href="/events" class="text-2xl">Events</a>
+				<a href="/aboutus" class="text-2xl">About Us</a>
+				<a href="/faqs" class="text-2xl">FAQs</a>
+				{% if isUser == False %}
+					<a href="/login" class="text-2xl">Login</a>
+					<a href="/register" class="text-2xl">Register</a>
+					{%else%}
+					{% if isVolunteer == True%}
+						<a href="/ticketVerifer" class="text-2xl">Verifer</a>
+					{%endif%}
+					<a href="/myTicket" class="text-2xl">My Tickets</a>
+				{%endif%}
+			</div>
         </nav>
     </div>
 
