--- a/templates/ticket.html
+++ b/templates/ticket.html
@@ -41,7 +41,7 @@
 				<img src="/static/avatars/{{profilePic}}.png" alt="" class="w-[50px] h-[50px] rounded-full object-cover cursor-pointer bg-slate-300" onclick="toggleProfileDropdown()" />
 
 				<div class="absolute bg-slate-600 top-16 right-0 w-full min-w-[200px] rounded-md z-[999] h-0 overflow-hidden transition-all duration-300" id="profile-dropdown">
-					<p class="w-full px-4 text-white"><i class="bi bi-person mr-2.5"></i>{{userName}}</p>
+					<p class="w-full px-4 text-white truncate capitalize"><i class="bi bi-person mr-2.5"></i>{{userName}}</p>
 					<hr class="w-full my-2" />
 					<a href="/logout" class="">
 						<p class="w-full px-4 text-white"><i class="bi bi-box-arrow-right mr-2.5"></i>Logout</p>
@@ -57,27 +57,30 @@
 					</div>
 					<div class="grid grid-cols-1 gap-4 sm:grid-cols-2 sm:gap-5 lg:grid-cols-3 lg:gap-6 xl:grid-cols-4">
 						{% for ticket in data%}
-						<div id="ticket_{{ticket.id}}" class="flex grow flex-col pt-5 border rounded-lg {% if ticket.isPaid == True%}bg-green-500/60{%else%}bg-red-500/60{%endif%} transition-all duration-300">
-							<div class="flex items-center justify-between gap-5 w-full px-4">
+						<div id="ticket_{{ticket.id}}" class="flex grow flex-col justify-between pt-5 border rounded-lg {% if ticket.isPaid == True%}bg-green-500/60{%else%}bg-red-500/60{%endif%} transition-all duration-300">
+							<div class="flex items-center gap-5 w-full px-4">
 								<div class="avatar w-[20%] min-w-[20%]">
 									<img class="rounded-full ring ring-[#ffffff] w-full h-full object-cover bg-slate-500" src="/static/avatars/{{ticket.profilePic}}.png" alt="avatar" />
 								</div>
-								<div>
+								<div class="overflow-hidden">
 									<h3 class="text-lg font-medium text-white dark:text-navy-100">{{ticket.username}}</h3>
-									<p class="text-gray-300 truncate max-w-[90%]">{{ticket.email}}</p>
+									<p class="text-gray-300 truncate">{{ticket.email}}</p>
+									<p class="capitalize text-white">Ticket id : T{{ticket.id}}</p>
 								</div>
 							</div>
+							<!-- <div>
+								<p class="capitalize text-[#221e60] bg-white rounded-full">Team id : T0123</p>
+							</div> -->
 							<div class="my-4 px-4">
 								<h1 class="text-white font-bold text-xl title-truncate">{{ticket.eventName}}</h1>
 								<p class="text-white">₹ {{ticket.price}}</p>
 							</div>
-							<div class="bg-[#2F1D69] text-white text-center p-2 rounded-b-lg font-semibold">
+							<div class="bg-[#2F1D69] text-white text-center rounded-b-lg font-semibold">
 								{% if ticket.isPaid == True%}
-								<button disabled class="outline-none focus:outline-none">Accepted</button>
+								<button disabled class="outline-none focus:outline-none w-full p-2">Accepted</button>
 								{%else%}
-								<button onclick="acceptTicket('{{ticket.id}}',this)" class="outline-none focus:outline-none">Accept</button>
+								<button onclick="acceptTicket('{{ticket.id}}',this)" class="outline-none focus:outline-none w-full p-2">Accept</button>
 								{%endif%}
-								
 							</div>
 						</div>
 						{%endfor%}
@@ -120,13 +123,13 @@
 					<img src="/static/logoCus.png" class="h-14 w-auto" />
 				</a>
 
-				<div class="relative flex items-center justify-center gap-4 lg:hidden">
+				<div class="relative flex items-center justify-center gap-4">
 					<!-- Profile Image -->
 					<img src="/static/avatars/{{profilePic}}.png" alt="" class="w-[45px] h-[45px] rounded-full object-cover bg-slate-300" onclick="toggleProfileDropdown()" />
 					<!-- Profile -->
 					<div class="fixed right-10 top-6 z-[999] overflow-visible flex items-center justify-center gap-4 px-[calc(2vh)]">
-						<div class="absolute bg-white top-16 right-0 w-full min-w-[200px] rounded-md z-[999] h-0 overflow-hidden transition-all duration-300" id="profile-dropdown-mobile">
-							<p class="w-full px-4 text-white"><i class="bi bi-person mr-2.5"></i>{{userName}}</p>
+						<div class="absolute bg-slate-600 top-16 right-0 w-full min-w-[200px] rounded-md z-[999] h-0 overflow-hidden transition-all duration-300" id="profile-dropdown-mobile">
+							<p class="w-full px-4 text-white truncate capitalize"><i class="bi bi-person mr-2.5"></i>{{userName}}</p>
 							<hr class="w-full my-2" />
 							<a href="/logout" class="">
 								<p class="w-full px-4 text-white"><i class="bi bi-box-arrow-right mr-2.5"></i>Logout</p>
@@ -138,14 +141,21 @@
 				</div>
 
 				<!-- Mobile Menu -->
-				<div class="absolute top-0 left-full flex flex-col gap-5 items-center justify-center w-screen h-screen z-[999] bg-white bg-opacity-95 transition-all duration-300" id="mobile-menu">
-					<button class="absolute top-5 right-5 !outline-none" onclick="toggleMobileMenu()"><i class="bi bi-x-lg"></i></button>
+				<div class="absolute top-0 left-full flex flex-col gap-5 items-center justify-center w-screen h-screen z-[999] bg-slate-900 bg-opacity-95 transition-all duration-300" id="mobile-menu">
+					<button class="absolute top-10 right-10 !outline-none" onclick="toggleMobileMenu()"><i class="bi bi-x-lg"></i></button>
 					<a href="/" class="text-2xl">Home</a>
 					<a href="/events" class="text-2xl">Events</a>
-					<a href="#" class="text-2xl">Event Confirm</a>
 					<a href="/aboutus" class="text-2xl">About Us</a>
-					<a href="/login" class="text-2xl">Login</a>
-					<a href="/register" class="text-2xl">Register</a>
+					<a href="/faqs" class="text-2xl">FAQs</a>
+					{% if isUser == False %}
+						<a href="/login" class="text-2xl">Login</a>
+						<a href="/register" class="text-2xl">Register</a>
+						{%else%}
+						{% if isVolunteer == True%}
+							<a href="/ticketVerifer" class="text-2xl">Verifer</a>
+						{%endif%}
+						<a href="/myTicket" class="text-2xl">My Tickets</a>
+					{%endif%}
 				</div>
 			</nav>
 
